<resources>
  <string name="app_name" translatable="false">Pinnit</string>
  <string name="app_version" translatable="false">VERSION %1$s</string>

  <string name="toolbar_title_notifications">Notifications</string>
  <string name="no_notifications">No notifications</string>
  <string name="dot_separator" translatable="false">•</string>
  <string name="editor_title_hint">Title</string>
  <string name="editor_content_hint">Description</string>
  <string name="channel_name">Pinned Notifications</string>
  <string name="notification_deleted">Notification deleted</string>

  <string name="toolbar_title_create">Create</string>
  <string name="toolbar_title_edit">Edit</string>

  <string name="create">Create</string>
  <string name="save_and_pin">save and pin</string>
  <string name="save">Save</string>

  <string name="schedule">Schedule</string>
  <string name="repeat_every">Repeat Every…</string>
  <string name="repeat_day">Day</string>
  <string name="repeat_week">Week</string>
  <string name="repeat_month">Month</string>

  <string name="option_item_dark_mode">Dark mode</string>

  <string name="dev_email_address" translatable="false">contact@sasikanth.dev</string>

  <!-- Preferences -->
  <string name="pref_theme_light" translatable="false">pref_notif_light</string>
  <string name="pref_theme_dark" translatable="false">pref_notif_dark</string>
  <string name="pref_theme_auto" translatable="false">pref_notif_auto</string>
  <string name="option_dark_mode_on">on</string>
  <string name="option_dark_mode_auto">auto</string>
  <string name="option_dark_mode_off">off</string>

  <!-- About -->
  <string name="about">About</string>
  <string name="privacy_policy">Privacy policy</string>
  <string name="questions_or_bugs">Questions or bug reports?</string>
  <string name="contact_support">Contact support</string>
  <string name="source_code" translatable="false">Source code</string>
  <string name="warning_about_oem">Warning about your device</string>
  <string name="support_subject" translatable="false">Pinnit support : %1$s</string>
  <string name="support_content" translatable="false">-- Device Information --\n
    Manufacturer: %1$s\n
    Model: %2$s\n
    SDK: %3$s\n
    \n
  </string>
  <string name="send_email">Send email</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="undo">Undo</string>

  <!-- Notification Actions -->
  <string name="unpin">Unpin</string>
  <string name="delete">Delete</string>

  <!-- Confirm Editor Exit-->
  <string name="confirm_editor_exit_title">Discard changes?</string>
  <string name="confirm_editor_exit_positive_action">Yes</string>
  <string name="confirm_editor_exit_negative_action">No</string>
  <string name="confirm_delete_notification_title">Delete notification?</string>
  <string name="confirm_delete_notification_desc">This action cannot be undone.</string>
  <string name="confirm_delete_notification_positive_action">Yes</string>
  <string name="confirm_delete_notification_negative_action">No</string>

  <!-- QS Popup -->
  <string name="qs_popup_open_app">Open App</string>

  <!-- OEM Warning Dialog -->
  <string name="oem_warning_title">Warning regarding your device’s manufacturer</string>
  <string name="oem_warning_subtitle">
    Some manufacturers are known for aggressively closing apps in the background. While Pinnit does not run in the background, if the app is forceably shut down, Pinnit notifications will be dismissed from your panel and will only return once the app is launched again.
    \n
    \nTo avoid this, visit the link below and follow the instructions.
  </string>
  <string name="oem_warning_show_instructions">show instructions</string>

  <string name="notification_schedule_button">%1$s - %2$s</string>
  <string name="notification_schedule_button_today">Today - %1$s</string>
  <string name="notification_schedule_button_yesterday">Yesterday - %1$s</string>
  <string name="notification_schedule_button_tomorrow">Tomorrow - %1$s</string>
  <string name="notification_menu_edit_schedule">Edit schedule</string>
  <string name="notification_menu_remove_schedule">Remove schedule</string>
  <string name="editor_schedule_past_warning">We haven\'t implemented time travel just yet. Please schedule your notification in the future.</string>
</resources>
