<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:animateLayoutChanges="true">

  <ImageView
    android:id="@+id/scheduleTopDivider"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:contentDescription="@null"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/divider" />

  <dev.sasikanth.pinnit.widgets.CheckableImageView
    android:id="@+id/addRemoveScheduleButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:contentDescription="@null"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackgroundBorderless"
    android:padding="24dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/avd_add_to_delete"
    app:tint="?attr/colorSecondary" />

  <TextView
    android:id="@+id/scheduleHeadingTextView"
    style="@style/TextStyle.Pinnit.Subtitle1.ScheduleHeading"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:text="@string/schedule"
    android:visibility="visible"
    app:layout_constraintBottom_toBottomOf="@id/addRemoveScheduleButton"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@id/addRemoveScheduleButton"
    tools:visibility="gone" />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/scheduleDateButton"
    style="@style/Widget.Pinnit.Button.TextButton.Schedule"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:visibility="gone"
    app:icon="@drawable/ic_arrow_drop_down"
    app:layout_constraintBottom_toBottomOf="@id/addRemoveScheduleButton"
    app:layout_constraintEnd_toStartOf="@id/scheduleTimeButton"
    app:layout_constraintHorizontal_bias="0"
    app:layout_constraintHorizontal_chainStyle="packed"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@id/addRemoveScheduleButton"
    tools:text="Aug 27"
    tools:visibility="visible" />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/scheduleTimeButton"
    style="@style/Widget.Pinnit.Button.TextButton.Schedule"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:visibility="gone"
    app:icon="@drawable/ic_arrow_drop_down"
    app:layout_constraintBottom_toBottomOf="@id/addRemoveScheduleButton"
    app:layout_constraintEnd_toStartOf="@id/addRemoveScheduleButton"
    app:layout_constraintStart_toEndOf="@id/scheduleDateButton"
    app:layout_constraintTop_toTopOf="@id/addRemoveScheduleButton"
    tools:text="9:30 PM"
    tools:visibility="visible" />

  <com.google.android.material.checkbox.MaterialCheckBox
    android:id="@+id/repeatEveryCheckBox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="16dp"
    android:text="@string/repeat_every"
    android:textAppearance="@style/TextAppearance.Pinnit.Button"
    android:textColor="@color/schedule_checkbox_state"
    android:visibility="gone"
    app:buttonTint="@color/schedule_checkbox_state"
    app:layout_constraintBottom_toTopOf="@id/scheduleBottomBarrier"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/addRemoveScheduleButton"
    app:layout_constraintVertical_bias="0"
    tools:visibility="visible" />

  <com.google.android.material.button.MaterialButtonToggleGroup
    android:id="@+id/repeatEveryButtonGroup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="24dp"
    android:layout_marginBottom="16dp"
    android:visibility="gone"
    app:checkedButton="@id/repeatDailyButton"
    app:layout_constraintBottom_toTopOf="@id/scheduleBottomBarrier"
    app:layout_constraintTop_toBottomOf="@id/repeatEveryCheckBox"
    app:selectionRequired="true"
    app:singleSelection="true"
    tools:visibility="visible">

    <com.google.android.material.button.MaterialButton
      android:id="@+id/repeatDailyButton"
      style="@style/Widget.Pinnit.Button.Group.OutlinedButton"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/repeat_day" />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/repeatWeeklyButton"
      style="@style/Widget.Pinnit.Button.Group.OutlinedButton"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/repeat_week" />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/repeatMonthlyButton"
      style="@style/Widget.Pinnit.Button.Group.OutlinedButton"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/repeat_month" />

  </com.google.android.material.button.MaterialButtonToggleGroup>

  <androidx.constraintlayout.widget.Barrier
    android:id="@+id/scheduleBottomBarrier"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:barrierAllowsGoneWidgets="false"
    app:barrierDirection="bottom"
    app:constraint_referenced_ids="addRemoveScheduleButton, repeatEveryCheckBox, repeatEveryButtonGroup" />

  <ImageView
    android:id="@+id/scheduleBottomDivider"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:contentDescription="@null"
    app:layout_constraintTop_toBottomOf="@id/scheduleBottomBarrier"
    app:srcCompat="@drawable/divider" />

</androidx.constraintlayout.widget.ConstraintLayout>
