<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/notificationsRoot"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".notifications.NotificationsScreen">

  <com.google.android.material.appbar.AppBarLayout
    android:id="@+id/appBarLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/colorBackground"
    app:elevation="0dp"
    app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.appbar.MaterialToolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_scrollFlags="enterAlwaysCollapsed|scroll"
      app:title="@null">

      <com.google.android.material.textview.MaterialTextView
        android:id="@+id/toolbarTitleTextView"
        style="@style/TextStyle.Pinnit.Headline6"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/toolbar_title_notifications" />

    </com.google.android.material.appbar.MaterialToolbar>

    <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_marginTop="-1dp"
      android:background="@drawable/divider" />

  </com.google.android.material.appbar.AppBarLayout>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

    <ImageView
      android:id="@+id/noNotificationsImageView"
      android:layout_width="80dp"
      android:layout_height="80dp"
      android:contentDescription="@null"
      android:src="@drawable/illustration_pinnit_pin"
      android:visibility="gone"
      app:layout_constraintBottom_toTopOf="@id/noNotificationsTextView"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_chainStyle="packed"
      tools:visibility="visible" />

    <com.google.android.material.textview.MaterialTextView
      android:id="@+id/noNotificationsTextView"
      style="@style/TextStyle.Pinnit.Headline6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="72dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="72dp"
      android:layout_marginBottom="88dp"
      android:text="@string/no_notifications"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/noNotificationsImageView"
      tools:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/notificationsRecyclerView"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:clipToPadding="false"
      android:paddingBottom="88dp"
      android:visibility="gone"
      app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:listitem="@layout/notifications_list_item"
      tools:visibility="visible" />

  </androidx.constraintlayout.widget.ConstraintLayout>

  <dev.sasikanth.pinnit.widgets.PinnitBottomBar
    android:id="@+id/bottomBar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:animateLayoutChanges="true"
    android:background="?attr/colorSurface"
    app:actionIcon="@drawable/ic_pinnit_about"
    app:contentActionText="@string/create"
    app:navigationIcon="@drawable/ic_pinnit_dark_mode" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
