<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/backgroundRoot"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".qspopup.QsPopupActivity">

  <com.google.android.material.card.MaterialCardView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/qs_popup_margin_start"
    android:layout_marginTop="@dimen/qs_popup_margin_top"
    android:layout_marginEnd="@dimen/qs_popup_margin_end"
    android:layout_marginBottom="@dimen/qs_popup_margin_bottom"
    android:clickable="true"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:focusable="true"
    app:rippleColor="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <androidx.constraintlayout.widget.Guideline
        android:id="@+id/toolbarGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="56dp" />

      <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="56dp" />

      <com.google.android.material.textview.MaterialTextView
        android:id="@+id/toolbarTitleTextView"
        style="@style/TextStyle.Pinnit.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/toolbar_title_notifications"
        app:layout_constraintBottom_toTopOf="@id/toolbarGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

      <com.google.android.material.button.MaterialButton
        android:id="@+id/openAppButton"
        style="@style/Widget.Pinnit.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/qs_popup_open_app"
        app:layout_constraintBottom_toTopOf="@id/toolbarGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@id/toolbarTitleTextView"
        app:layout_constraintTop_toTopOf="parent" />

      <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@drawable/divider"
        app:layout_constraintBottom_toBottomOf="@id/toolbarGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/toolbarGuideline" />

      <ImageView
        android:id="@+id/noNotificationsImageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@null"
        android:src="@drawable/illustration_pinnit_pin"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/noNotificationsTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:visibility="visible" />

      <com.google.android.material.textview.MaterialTextView
        android:id="@+id/noNotificationsTextView"
        style="@style/TextStyle.Pinnit.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="72dp"
        android:text="@string/no_notifications"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/noNotificationsImageView"
        tools:visibility="visible" />

      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/qsPopupNotificationsRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarGuideline"
        tools:listitem="@layout/notifications_list_item" />

      <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?android:attr/colorBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottomGuideline" />

      <com.google.android.material.button.MaterialButton
        android:id="@+id/createNotificationButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottomGuideline" />

      <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@drawable/divider"
        app:layout_constraintBottom_toBottomOf="@id/bottomGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/bottomGuideline" />

    </androidx.constraintlayout.widget.ConstraintLayout>

  </com.google.android.material.card.MaterialCardView>

</FrameLayout>
